@@ -7,6 +7,4 @@ recheck ports of already existing clusters on installation (might collide)
 
 document autovacuum stuff in architecture.html and POD
 
-if there is only one cluster, use this, don't insist on port 5432
-
 start postmaster under the locale used by initdb
